-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
In ldlm_expired_completion_wait() there is a useless LCONSOLE_WARN() statement that prints "lock timed out (enqued at T, Ds ago)" which is followed by a LDLM_DEBUG() statement that prints the lock but not to the console or to the dmesg buffer. The console warning should be eliminated and the debug statement upgraded to an error.